<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:background="@color/white_3_100"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:text="@string/no_data"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/account"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            card_view:cardCornerRadius="@dimen/spacing_normal"
            card_view:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_gambar"
                    android:layout_width="@dimen/image_width_medium"
                    android:layout_height="@dimen/image_width_medium"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_icon_wisata"
                    tools:layout_editor_absoluteX="108dp"/>

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_super_larger"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_gambar"/>

                <View
                    android:id="@+id/v_sep"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nama"
                    android:layout_marginTop="@dimen/spacing_normal"
                    style="@style/Separator"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_sep"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:textAlignment="center"
                    android:text="Wisatakuy menyediakan rekomendasi-rekomendasi tempat wisata yang dapat dikunjungi oleh para wisatawan."/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_2"
            card_view:cardCornerRadius="@dimen/spacing_normal"
            card_view:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view">

            <Button
                android:id="@+id/bt_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Button.Action.Red"
                android:text="@string/logout"/>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>